<resources>
    <string name="app_name">The Cat in the Hat Apps</string>

    <string name="title_name">The Cat in the Hat Apps</string>
    <string name="action_settings">Settings</string>
    <string name="button1">The Cat</string>
    <string name="button2">Thing 1</string>
    <string name="button3">Thing 2</string>
    <string name="button4">Thingamajigger</string>
    <string name="button5">Sally</string>
    <string name="button6">Nick</string>
    <string name="button7">Dr. Suess</string>
</resources>
